@@ -770,8 +770,11 @@ Folder.editableFields.defaultProfile.propertyType=List
 Folder.editableFields.defaultProfile.allowedValues=UserProfile
 Folder.editableFields.defaultProfile._includeAddButton=true
 Folder.editableFields.useTrashFolder.propertyType=Boolean
+Folder.editableFields.useTrashFolder=True
 Folder.editableFields.notifyNewMessagesMain.propertyType=Boolean
+Folder.editableFields.notifyNewMessagesMain=True
 Folder.editableFields.notifyNewMessagesNode.propertyType=Boolean
+Folder.editableFields.notifyNewMessagesNode=True
 
 Store.propertyType=Multi
 Store.editableFields.scoped=true
@@ -855,6 +858,7 @@ Store.editableFields.storeConfig.mbox.mbox.scopeRoot=Store.editableFields
 Store.editableFields.password.propertyType=Password
 Store.editableFields.port._listeners=PropertyEditor.filter.portFilter
 Store.editableFields.SSL.propertyType=Boolean
+Store.editableFields.SSL=false
 Store.editableFields.cachingEnabled.propertyType=Boolean
 Store.editableFields.cachingEnabled=false
 Store.editableFields.autoCache.propertyType=Boolean
