@@ -1,3 +1,5 @@
+fixed editor display of boolean properties in Folder editor.
+
 worked around a sun bug in jdk1.4 which would result in the 
 FolderSelectorPane being empty the first time it was brought up.
 
